# ecor

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  annotated.html  annotated_dup.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_de58f73c0bade9cdb4543138f5d13262.html  dir_de58f73c0bade9cdb4543138f5d13262.js  ecor_8hpp_source.html  files.html  index.html  navtreedata.js  navtreeindex0.js  pprinter.py  structecor_1_1transaction__source-members.html  structecor_1_1transaction__source.html
.github/: copilot-instructions.md
.github/workflows/: ci.yml  clang-tidy.yml  doxygen.yml  release.yml  size.yml  test.yml
dep/zll/: zll.hpp
doc/: README.md
doc/plans/: ll-trnx-unification.md
include/ecor/: ecor.hpp
scripts/: check_md_line_length.py  size_report.sh
search/: all_1.js  pages_0.js  searchdata.js
test/: CMakeLists.txt  base_utest.cpp  gdb_test.cpp  gen_readme_cpp.py  size_probe.cpp  trace_utest.cpp  uart_utest.cpp  util.hpp
test/cmake/: arm-none-eabi-toolchain.cmake
